License validation and SV scan + jdk 11
IssueID : ACUMOS-3337,ACUMOS-3394

Change-Id: I00fed0f9e8ce98f506f57ed4526c897435b9cbcd
Signed-off-by: Yaseen Sanderwale <ys00619128@techmahindra.com>