@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.acumos.on-boarding</groupId>
 	<artifactId>onboarding-common</artifactId>
-	<version>3.4.0-SNAPSHOT</version>
+	<version>3.4.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Onboarding common jar</name>
 	<parent>
@@ -15,7 +15,6 @@
 		<relativePath />
 	</parent>
 	<properties>
-		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- For distributionManagement section -->
 		<acumos.nexus.url>https://nexus.acumos.org</acumos.nexus.url>
@@ -170,11 +169,12 @@
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-core</artifactId>
 			<version>1.6.1</version>
+    		<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-module-junit4</artifactId>
-			<version>1.6.1</version>
+			<version>1.7.0</version>
 		</dependency>
 		<dependency>
 		     <!--  Dependency for retrieving a project version -->
@@ -194,16 +194,54 @@
 		<artifactId>protobuf-dynamic</artifactId>
 		<version>0.9.4</version>
 	</dependency>
+	
+	<dependency>
+        <groupId>org.acumos.license-manager</groupId>
+        <artifactId>license-manager-client-library</artifactId>
+           <version>1.0.0</version>
+               <exclusions>
+                   <exclusion>
+                       <groupId>com.google.collections</groupId>
+                       <artifactId>google-collections</artifactId>
+                   </exclusion>
+                </exclusions>
+    </dependency>
+           
+         <dependency>
+			<groupId>com.networknt</groupId>
+			<artifactId>json-schema-validator</artifactId>
+			<version>1.0.20</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<!-- spring sets version -->
+		</dependency>
+		
+		<dependency>
+			<groupId>org.acumos.security-verification</groupId>
+			<artifactId>security-verification-client</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.3.1</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
+			
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					 <release>11</release>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -225,7 +263,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<!-- spring sets the <version>2.10.3</version> -->
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -235,6 +272,32 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+			<!-- Generate javadoc jar; see profile for Java 11 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.1.1</version>
+
+				<!-- spring chooses the <version>x</version> -->
+				<configuration>
+					<!-- during upgrade to jdk 11 
+					found that portal-fe javadoc build fails due to 
+					issues with different spring versions and only one is being used
+					by the javadoc:aggregate job-->	
+					<skip>true</skip>
+					<aggregate>false</aggregate>	<!-- this enables aggretation -->
+				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
 			<!-- Generate source jar -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -249,38 +312,34 @@
 					</execution>
 				</executions>
 			</plugin>
+						
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-			<!-- 	<configuration>
-          			<skipTests>true</skipTests>
-        		</configuration> -->
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>2.22.0</version>
+			    <configuration>
+			        <argLine>
+			            --illegal-access=permit
+			        </argLine>
+			    </configuration>
 			</plugin>
-			<!-- <plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.9</version>
-				<executions>
-					<execution>
-						<id>default-prepare-agent</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>default-report</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin> -->
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-failsafe-plugin</artifactId>
+			    <version>2.22.0</version>
+			    <configuration>
+			        <argLine>
+			            --illegal-access=permit
+			        </argLine>
+			    </configuration>
+			</plugin>
+			
 			<plugin>
 			<groupId>org.jacoco</groupId>
 			<artifactId>jacoco-maven-plugin</artifactId>
-			<!-- Override OParent version -->
-			<version>${jacocoVersion}</version>
+			<!-- Override Parent version -->
+			<!-- <version>${jacocoVersion}</version>  -->
+			<version>0.8.4</version>
 			<configuration>
 				<excludes>
 					<exclude>*</exclude>
@@ -313,20 +372,6 @@
 					<configuration>
 						<destFile>${sonar.jacoco.reportPath}</destFile>
 					</configuration>
-				</execution>
-				<!-- offline instrumentation for PowerMock-->
-				<execution>
-				 	<id>portal-offline-instrument</id>
-					<goals>
-						<goal>instrument</goal>
-					</goals>
-				</execution>
-				<execution>
-					<id>portal-restore-instrumented-classes</id>
-					<phase>test</phase>
-					<goals>
-						<goal>restore-instrumented-classes</goal>
-					</goals>
 				</execution>
 				<execution>
 					<id>portal-post-unit-test</id>
